--- a/src/template/index.hbs
+++ b/src/template/index.hbs
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>管理输出</title>
+  <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
   <main id="app"></main>
-<script src="bundle.js"></script></body>
+</body>
 </html>
